move js to file js

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <div class="intro">
           <h1>Cryptovoxels - a user owned virtual world</h1>
           <p>Cryptovoxels is a virtual world and metaverse, powered by the Ethereum blockchain. Players can <a
-              href="https://www.cryptovoxels.com/buy">buy land</a> and build stores and art galleries. Editing tools, avatars and text chat are
+              href="/buy">buy land</a> and build stores and art galleries. Editing tools, avatars and text chat are
             built in.</p>
-          <p>Explore <a href="https://www.cryptovoxels.com/map">the map</a>, search for <a href="https://www.cryptovoxels.com/parcels?q=gallery">Galleries</a>, <a
+          <p>Explore <a href="/map">the map</a>, search for <a href="https://www.cryptovoxels.com/parcels?q=gallery">Galleries</a>, <a
               href="https://www.cryptovoxels.com/parcels?q=portal">Portals</a> or curated <a href="https://www.cryptovoxels.com/parcels?q=collection">Collections</a>.</p>
         </div>
         <div class="JoinCommunity">
