--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <section class="TourBanner">
       <div class="play-view"></div>
-      <div class="playNow"><a native href="https://www.cryptovoxels.com/play"><b>Play now</b> in your browser</a> or
+      <div class="playNow"><a native href="javascript:void()" onclick="playNow()"><b>Play now</b> in your browser</a> or
         create a <a href="https://www.cryptovoxels.com/account/spaces" class="void"><b>Free Space</b></a></div>
     </section>
     <section class="HomePreview">
