add function free space

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="TourBanner">
       <div class="play-view"></div>
       <div class="playNow"><a native href="javascript:void()" onclick="playNow()"><b>Play now</b> in your browser</a> or
-        create a <a href="https://www.cryptovoxels.com/account/spaces" class="void"><b>Free Space</b></a></div>
+        create a <a href="javascript:void" class="void" onclick="freeSpace()"><b>Free Space</b></a></div>
     </section>
     <section class="HomePreview">
       <div class="columns">
