--- a/buy/index.html
+++ b/buy/index.html
@@ -20,6 +20,7 @@
             <li><a href="/map" class>Map</a></li>
             <li><a href="/buy" class="-active">Buy Parcels</a></li>
             <li><a class href="/marketplace">Marketplace</a></li>
+            <li><a class="" href="/token.html">Token</a></li>
             <li><a class href="https://support.cryptovoxels.com">Support</a></li>
             <li class="WebSearch"><input type="search" placeholder="Search..."></li>
           </ul>
