change style token

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <div class="JoinCommunity">
           <div class="social-links-container">
             <ul class="SocialLinksList">
+              <li><a href="https://t.me/crypto_voxels"><img src="/images/Telegram.png" title="Telegram" class="icon"><span>Telegram</span></a></li>
               <li><a href="https://twitter.com/cryptovoxels"><img src="images/twitter.png" title="Twitter"
                     class="icon"><span>Twitter</span></a></li>
               <li><a href="https://www.reddit.com/r/cryptovoxels/"><img src="images/reddit.png" title="Reddit"
@@ -779,7 +780,7 @@ dancing with clunky the rat  at bitpixi's bar !" class="userDescription">
       </div>
     </section>
     <footer>
-      <p class="footer-links"><a href="https://www.cryptovoxels.com/about">About</a> | <a href="https://wiki.cryptovoxels.com/"
+      <p class="footer-links"><a href="https://wiki.cryptovoxels.com/"
           target="_blank">Wiki</a> | <a href="https://www.cryptovoxels.com/press">Press and Team</a> | <a
           href="https://offsetra.com/profile/cryptovoxels" target="_blank">Carbon offset</a></p>
       <p>Cryptovoxels V.18510</p>
