--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -658,7 +658,7 @@ By Mattie Fight Club</p><p>By Mattie020</p></div></div><div class="wearable-thum
       </section>
       <div style="height: 50px;"></div>
       <footer>
-        <p class="footer-links"><a href="/about">About</a> | <a href="https://wiki.cryptovoxels.com/"
+        <p class="footer-links"><a href="https://wiki.cryptovoxels.com/"
             target="_blank">Wiki</a> | <a href="https://trello.com/b/0eMw7Y5p/cryptovoxels-roadmap-2022"
             target="_blank">Roadmap</a>| <a href="/press">Press and Team</a> | <a
             href="https://offsetra.com/profile/cryptovoxels" target="_blank">Carbon offset</a></p>
