--- a/token.html
+++ b/token.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="o5_ZqQfMG6_AC3py_4L8zNpFfHVSZ3aj3JEGlB2rN5Y">
   <link rel="shortcut icon" href="images/favicon.png">
-  <link href="css/style.css" rel="stylesheet">
   <link href="css/web.css" rel="stylesheet">
   <title>Cryptovoxels - Ethereum Virtual World</title>
   <meta property="og:title" content="A blockchain virtual world and metaverse">
@@ -319,51 +318,10 @@ div.omrs-input-group {
     </section>
     <br><br>
     <section id="block-04" class="content-holder">
-      <h2>Our partners</h2>
-      <div class="partners-block">
-          <ul>
-              <li>
-                  <figure>
-                    <figcaption class="figure-partner">TM design</figcaption>
-                  </figure>
-              </li>
-              <li>
-                  <figure>
-                    <figcaption class="figure-partner">Adidas</figcaption>
-                  </figure>
-              </li>
-              <li>
-                  <figure>
-                      <figcaption class="figure-partner">Musik (Dj sandbox)</figcaption>
-                  </figure>
-              </li>
-              <li>
-                  <figure>
-                      <figcaption class="figure-partner">PepsiMicdrop</figcaption>
-                  </figure>
-              </li>
-          </ul>
-          <ul>
-            <li>
-                <figure>
-                    <figcaption class="figure-partner">Flegz Art gallery</figcaption>
-                </figure>
-            </li>
-              <li>
-                  <figure>
-                      <figcaption class="figure-partner">MultiNFT center</figcaption>
-                  </figure>
-              </li>
-              <li>
-                  <figure>
-                      <figcaption class="figure-partner">The Land of NFTs</figcaption>
-                  </figure>
-              </li>
-          </ul>
-      </div>
-  </section>
+      <p>$COLR can be used in metaverse cryptovoexls TM design, adidas, Dj sandbox, pepsiMicdrop, flegz art gallery, multiNFT center and The land of NFTs.</p>
+    </section>
     <footer>
-      <p class="footer-links"><a href="https://www.cryptovoxels.com/about">About</a> | <a href="https://wiki.cryptovoxels.com/"
+      <p class="footer-links"><a href="https://wiki.cryptovoxels.com/"
           target="_blank">Wiki</a> | <a href="https://www.cryptovoxels.com/press">Press and Team</a> | <a
           href="https://offsetra.com/profile/cryptovoxels" target="_blank">Carbon offset</a></p>
       <p>Cryptovoxels V.18510</p>
