--- a/marketplace/parcels.html
+++ b/marketplace/parcels.html
@@ -1168,7 +1168,7 @@
       </div>
       <div style="height: 50px;"></div>
       <footer>
-        <p class="footer-links"><a href="/about">About</a> | <a href="https://wiki.cryptovoxels.com/"
+        <p class="footer-links"><a href="https://wiki.cryptovoxels.com/"
             target="_blank">Wiki</a> | <a href="https://trello.com/b/0eMw7Y5p/cryptovoxels-roadmap-2022"
             target="_blank">Roadmap</a>| <a href="/press">Press and Team</a> | <a
             href="https://offsetra.com/profile/cryptovoxels" target="_blank">Carbon offset</a></p>
