add telegram in token

--- a/token.html
+++ b/token.html
@@ -272,6 +272,7 @@ div.omrs-input-group {
         <div class="JoinCommunity">
           <div class="social-links-container">
             <ul class="SocialLinksList">
+              <li><a href="https://t.me/crypto_voxels"><img src="/images/Telegram.png" title="Telegram" class="icon"><span>Telegram</span></a></li>
               <li><a href="https://twitter.com/cryptovoxels"><img src="images/twitter.png" title="Twitter"
                     class="icon"><span>Twitter</span></a></li>
               <li><a href="https://www.reddit.com/r/cryptovoxels/"><img src="images/reddit.png" title="Reddit"
