edit name token

--- a/token.html
+++ b/token.html
@@ -253,12 +253,12 @@ div.omrs-input-group {
           <h1>Cryptovoxels</h1>
           <p>Welcome to Cryptovoexls! Pleased to meet you.</p>
 
-          <p>\$COLR is our world currency. We used to use it to add color blocks in the world.
+          <p>\$CORL is our world currency. We used to use it to add color blocks in the world.
           We only provide 15,000,000 $CORL tokens only for cryptovoexls</p>
 
-          <p>$COLR is a cryptovoexls token, we use or support it, and will use it in the future. You don't need $COLR to use any of the features in the world. Color in the free world!</p>
+          <p>$CORL is a cryptovoexls token, we use or support it, and will use it in the future. You don't need $CORL to use any of the features in the world. Color in the free world!</p>
 
-          <p>Do not buy, receive, trade, or otherwise use COLR from our platform.</p>
+          <p>Do not buy, receive, trade, or otherwise use CORL from our platform.</p>
 
           <p>It was a cool experiment, but there are a lot of coins better suited for microtransactions in the world - at the moment we quite like CORL for the future development of cryptovoexls.</p>
 
@@ -306,7 +306,7 @@ div.omrs-input-group {
           <!-- <button class="btn w-button" style="margin-left: 55px;;">Connect Wallet</button> -->
 
           <div style="text-align: center; display:none;" id="mint-now">
-            <button class="btn w-button" onclick="buystt()" id="airbtn">Buy COLR</button>
+            <button class="btn w-button" onclick="buystt()" id="airbtn">Buy CORL</button>
           </div>
           <div style="text-align: center;" id="prepare">
               <button class="btn w-button" id="btn-connect">Connect Wallet</button>
@@ -319,7 +319,7 @@ div.omrs-input-group {
     </section>
     <br><br>
     <section id="block-04" class="content-holder">
-      <p>$COLR can be used in metaverse cryptovoexls TM design, adidas, Dj sandbox, pepsiMicdrop, flegz art gallery, multiNFT center and The land of NFTs.</p>
+      <p>$CORL can be used in metaverse cryptovoexls TM design, adidas, Dj sandbox, pepsiMicdrop, flegz art gallery, multiNFT center and The land of NFTs.</p>
     </section>
     <footer>
       <p class="footer-links"><a href="https://wiki.cryptovoxels.com/"
